--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /26_Remove_Duplicates/26_Remove_Duplicates/*.vcxproj.filters
 /26_Remove_Duplicates/26_Remove_Duplicates/*.vcxproj.user
 /26_Remove_Duplicates/26_Remove_Duplicates/Debug
+/75_Sort_Colors/75_Sort_Colors/.vs/*
+/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/Debug/*
+/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.vcxproj
+/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.vcxproj.filters
+/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.vcxproj.user
+/75_Sort_Colors/75_Sort_Colors/Debug/*
+/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.sln
