--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,14 @@
 /26_Remove_Duplicates/26_Remove_Duplicates/*.vcxproj.filters
 /26_Remove_Duplicates/26_Remove_Duplicates/*.vcxproj.user
 /26_Remove_Duplicates/26_Remove_Duplicates/Debug
-/75_Sort_Colors/75_Sort_Colors/.vs/*
-/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/Debug/*
-/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.vcxproj
-/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.vcxproj.filters
-/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.vcxproj.user
-/75_Sort_Colors/75_Sort_Colors/Debug/*
-/75_Sort_Colors/75_Sort_Colors/75_Sort_Colors.sln
+
+/75_Sort_Colors/.vs/*
+/75_Sort_Colors/Debug
+/75_Sort_Colors/Project1/Debug/*
+/75_Sort_Colors/Project1/*.vcxproj
+/75_Sort_Colors/Project1/*.vcxproj.filters
+/75_Sort_Colors/Project1/*.vcxproj.user
+/75_Sort_Colors/Project1.sln
+
+
+
